--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -82,7 +82,7 @@ class="active"
 					<h2>Please add your contact details <span>Michael Kirk</span></h2>
 					<p>
 						For users with a login, there's now a place to add a contact name
-                        and email address for the account (under the "Profile/Passwords" link
+                        and email address for the project (under the "Profile/Passwords" link
                         on the left hand side once you log in). Please add a name and email
                         address here so that we can contact you if necessary.
                         <!-- If you need to link to more..
