--- a/fpa/fp_web_admin/templates/dataPage.html
+++ b/fpa/fp_web_admin/templates/dataPage.html
@@ -10,6 +10,27 @@
 {% extends "base.html" %}
 {% block content %}
 <div id="dataWrapper">
+<div class="dataHeader">
+
+  <div id="dataLeftBar">
+    {{navContent|safe}}
+  </div>
+  </div>
+
+  <div class="dataContent">
+      {% block dataContent %}
+      {{content|safe}}
+      {% endblock %}
+  </div>
+
+  {% block dataHelpPane %}
+  {% endblock %}
+
+</div>
+{% endblock %}
+{#
+{% block content %}
+<div id="dataWrapper">
 
   <div id="dataLeftBar">
     {{navContent|safe}}
@@ -26,3 +47,21 @@
 
 </div>
 {% endblock %}
+
+{% block content %}
+<div class="dataHeader">
+  <div id="dataLeftBar">
+    {{navContent|safe}}
+  </div>
+</div>
+ <div id="dataWrapper" style="clear:both">
+ <div class="dataContent">
+      {% block dataContent %}
+      {{content|safe}}
+      {% endblock %}
+  </div>
+  {% block dataHelpPane %}
+  {% endblock %}
+</div>
+{% endblock %}
+#}
