--- a/fpa/fp_web_admin/static/css/style.css
+++ b/fpa/fp_web_admin/static/css/style.css
@@ -1,5 +1,5 @@
 /* Website template by freewebsitetemplates.com */
-/*------------------------- Layout styles ------------------------*/ 
+/*------------------------- Layout styles ------------------------*/
 body{
     margin:0;
     font-family: Verdana, Geneva, sans-serif;
@@ -27,13 +27,13 @@ h2{
 h3{
     color: #0F4A84;
 }
-/*------------------------- Font ------------------------*/ 
+/*------------------------- Font ------------------------*/
 @font-face {
     font-weight: normal;
     font-style: normal;
 }
 
-/*------------------------- Header ------------------------*/ 
+/*------------------------- Header ------------------------*/
 /*
 .header{
     background: #333 no-repeat center 90px;
@@ -84,6 +84,18 @@ h3{
     outline:none;
 }
 */
+
+/*
+ * class dataHeader
+ * For the top part of the page when user is logged in.
+ */
+.dataHeader {
+    width: 100%;
+    min-width: 800px;  /* It looks a bit better with min width, but maybe not good for mobile. */
+    height: 80px;
+    background: white;
+    z-index: 1000;
+}
 .header {
     width: 100%;
     height: 80px;
@@ -267,9 +279,9 @@ label { display: inline-block; width: 140px; text-align: left; }​
 }
 
 .videoToDrag{
-    float: left; 
-    height:200px; 
-    padding:10px; 
+    float: left;
+    height:200px;
+    padding:10px;
     max-width:300px;
 }
 .videoToDrag img, #welcomeuser img{
@@ -287,7 +299,7 @@ label { display: inline-block; width: 140px; text-align: left; }​
     left: 0px;
 }
 
-/*------------------------- Footer ------------------------*/ 
+/*------------------------- Footer ------------------------*/
 #footer{
     bottom: 0;
     width:100%;
@@ -433,16 +445,16 @@ label { display: inline-block; width: 140px; text-align: left; }​
 
 /* fancy text input boxes */
 .fancy {
-    border: 2px solid #ccc; 
-    -webkit-box-shadow: 
+    border: 2px solid #ccc;
+    -webkit-box-shadow:
       inset 0 0 8px  rgba(0,0,0,0.1),
-            0 0 16px rgba(0,0,0,0.1); 
-    -moz-box-shadow: 
+            0 0 16px rgba(0,0,0,0.1);
+    -moz-box-shadow:
       inset 0 0 8px  rgba(0,0,0,0.1),
-            0 0 16px rgba(0,0,0,0.1); 
-    box-shadow: 
+            0 0 16px rgba(0,0,0,0.1);
+    box-shadow:
       inset 0 0 8px  rgba(0,0,0,0.1),
-            0 0 16px rgba(0,0,0,0.1); 
+            0 0 16px rgba(0,0,0,0.1);
     padding: 2px;
     background: rgba(255,255,255,0.5);
     margin: 1px 0 1px 0;
