--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -11,6 +11,31 @@ class="active"
                 <li>
                     <div class="date">
                         <p>
+                            <span>12/1</span>
+                            2015
+                        </p>
+                    </div>
+                    <h2>Makeover (and ***REMOVED*** users)<span>Michael Kirk</span></h2>
+                    <p>
+                        FieldPrime has had a makeover! with some inspired graphic design provided by Raj Gaire.
+                        In addition, the new version now supports ***REMOVED*** users. What this means is that instead
+                        of everyone in a project using the same project name and password to login, you can instead
+                        use (if you have one) your CSIRO ***REMOVED*** identity. To allow a ***REMOVED*** user to login using
+                        their own ident and password, first you must login with the usual project login, go
+                        to administration page and add users in the "Manage ***REMOVED*** Users" section. This also means
+                        that if you have access to multiple projects, you can access all of them via a single
+                        ***REMOVED*** login (via a dropdown list of projects you have access to at the top of the FieldPrime
+                        pages).
+
+                        <!-- If you need to link to more..
+                        <span><a href="??.html" class="more">Read More</a></span>
+                        -->
+                    </p>
+                </li>
+
+                <li>
+                    <div class="date">
+                        <p>
                             <span>9/9</span>
                             2014
                         </p>
