--- a/fpa/fp_web_admin/static/fpStyle.css
+++ b/fpa/fp_web_admin/static/fpStyle.css
@@ -400,6 +400,7 @@ p a {
     padding: 15px 0 40px;
     word-wrap: normal;
     overflow: hidden;
+    clear: both;   // Prevent Firefox overlapping this div with dataLeftBar
 }
 
 .dataContentHelp{
