--- a/fpa/fp_web_admin/static/css/style.css
+++ b/fpa/fp_web_admin/static/css/style.css
@@ -187,7 +187,10 @@ li.mega-menu a:hover {
     background: url("images/grey-gradient.jpg") repeat-x 0 0;
 }
 
-label { display: inline-block; width: 140px; text-align: left; }​
+/*
+This was causing bad behaviour for the search box on a datatable (scoreset browse)
+label { display: inline-block; width: 140px; text-align: left; }*/
+​label { width: 140px; text-align: left; }
 /*------------------------- Body ------------------------*/
 #sidebar{
     width: 220px;
