--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -7,6 +7,25 @@ class="active"
 		<div class="main">
 			<h1>News</h1>
 			<ul class="news">
+                <li>
+                    <div class="date">
+                        <p>
+                            <span>18/3</span>
+                            2015
+                        </p>
+                    </div>
+                    <h2>ScoreSet plots<span>Michael Kirk</span></h2>
+                    <p>
+                        On the page for any numeric score set sample (accessed from the ScoreSets tab)
+                        there are now a few plots shown for the data: A box and whiskers plot, a histogram,
+                        and a scatter plot for which you can specify any numerical attribut in the trial to
+                        plot against. Feedback on these, or ideas for other plots are welcome..
+
+                        <!-- If you need to link to more..
+                        <span><a href="??.html" class="more">Read More</a></span>
+                        -->
+                    </p>
+                </li>
 
                 <li>
                     <div class="date">
@@ -15,10 +34,9 @@ class="active"
                             2015
                         </p>
                     </div>
-                    <h2>Makeover (and ***REMOVED*** users)<span>Michael Kirk</span></h2>
+                    <h2>***REMOVED*** users<span>Michael Kirk</span></h2>
                     <p>
-                        FieldPrime has had a makeover! with some inspired graphic design provided by Raj Gaire.
-                        In addition, the new version now supports ***REMOVED*** users. What this means is that instead
+                        The FieldPrime server now supports ***REMOVED*** users. What this means is that instead
                         of everyone in a project using the same project name and password to login, you can instead
                         use (if you have one) your CSIRO ***REMOVED*** identity. To allow a ***REMOVED*** user to login using
                         their own ident and password, first you must login with the usual project login, go
@@ -26,6 +44,23 @@ class="active"
                         that if you have access to multiple projects, you can access all of them via a single
                         ***REMOVED*** login (via a dropdown list of projects you have access to at the top of the FieldPrime
                         pages).
+
+                        <!-- If you need to link to more..
+                        <span><a href="??.html" class="more">Read More</a></span>
+                        -->
+                    </p>
+                </li>
+
+                <li>
+                    <div class="date">
+                        <p>
+                            <span>12/1</span>
+                            2015
+                        </p>
+                    </div>
+                    <h2>Makeover<span>Michael Kirk</span></h2>
+                    <p>
+                        FieldPrime has had a makeover - with some inspired graphic design work by Raj Gaire.
 
                         <!-- If you need to link to more..
                         <span><a href="??.html" class="more">Read More</a></span>
