--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -18,7 +18,7 @@ class="active"
                     <p>
                         On the page for any numeric score set sample (accessed from the ScoreSets tab)
                         there are now a few plots shown for the data: A box and whiskers plot, a histogram,
-                        and a scatter plot for which you can specify any numerical attribut in the trial to
+                        and a scatter plot for which you can specify any numerical attribute in the trial to
                         plot against. Feedback on these, or ideas for other plots are welcome..
 
                         <!-- If you need to link to more..
