--- a/fpa/fp_web_admin/static/fpStyle.css
+++ b/fpa/fp_web_admin/static/fpStyle.css
@@ -613,3 +613,11 @@ div.tabContent.hide {
 }
 */
 /******************************************************************************/
+/*
+.navbar {
+min-height: 80px;
+}
+.navbar-inverse {
+min-height: 80px;
+}
+*/
