--- a/fpa/fp_web_admin/templates/about.html
+++ b/fpa/fp_web_admin/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-	<div id="contents" class=infoText>
-		<div id="about">
+	<div id="contents" class="infoText fpInfoText">
+		<div class=fpInfoText>
 			<h1>About FieldPrime</h1>
 			<h2>History</h2>
 			<p>
@@ -30,7 +30,7 @@
             <li>Michael Kirk
             <li>Aswin Singaram Natarajan
             <li>Stuart Stephen
-            <li>Jen Taylor       
+            <li>Jen Taylor
 		</div>
 	</div>
 {% endblock %}
