--- a/fpa/fp_web_admin/static/fpStyle.css
+++ b/fpa/fp_web_admin/static/fpStyle.css
@@ -608,10 +608,7 @@ table.fptable{
 	padding: 0 20px 50px 0;
     margin: 0 20px;
 }
-.main h1, .sidebar h1 {
-	margin: 0 0 12px;
-	position: relative;
-}
+
 .main h2 span {
 	display: block;
 	font-size: 12px;
@@ -646,6 +643,7 @@ table.fptable{
 	color: #585858;
 }
 
+/* these infoText should be merged if possible */
 /*** infoText: ***/
 .infoText p  {
       color: #585858;
@@ -656,6 +654,20 @@ table.fptable{
 .infoText p a {
       color: #585858;
 }
+
+/* Class fpInfoText is used in 3 pages, news.html, about.html, and fieldprime.html
+ * The border-bottom draws a nice line under a H1 (of which there is only 1 on each
+ * of these pages).
+ */
+.fpInfoText {
+    margin: 0 20px;
+}
+.fpInfoText h1 {
+    border-bottom: 1px solid #e0e0e0;
+    padding-bottom: 12px;
+}
+
+
 /*******************************************/
 
 h1 {
@@ -674,25 +686,6 @@ h2 {
 }
 
 
-/* Paragraph styles, but this means text not in paragraph is styled differently
-p {
-	color: #585858;
-	font-size: 16px;
-	line-height: 24px;
-	margin: 0 0 30px;
-}
-p a {
-	color: #585858;
-}*/
-
-#tagline h1 {
-	margin-left: 20px;
-}
-#tagline > div {
-	float: left;
-	width: 400px;
-	margin: 0 20px;
-}
 #contents .features {
 	width: 810px;
 	margin: 0 auto;
@@ -709,23 +702,6 @@ p a {
 
 .description {
     color: #585858;
-}
-
-
-#about {
-	margin: 0 20px;
-}
-#about h1, .section h1 {
-	border-bottom: 1px solid #e0e0e0;
-	padding-bottom: 12px;
-}
-.section {
-	float: left;
-	width: 390px;
-	margin-right: 50px;
-}
-.section h1 {
-	margin-bottom: 18px;
 }
 
 
