--- a/fpa/fp_web_admin/templates/contact.html
+++ b/fpa/fp_web_admin/templates/contact.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 	<div id="contents" class=infoText>
-		<div id="about">
+		<div class=fpInfoText>
 			<h1>Contact</h1>
 			<h2>FieldPrime Software</h2>
 			<p>
