--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -10,6 +10,27 @@ class="active"
                 <li>
                     <div class="date">
                         <p>
+                            <span>30/4</span>
+                            2015
+                        </p>
+                    </div>
+                    <h2>New app version v1.0.2<span>Michael Kirk</span></h2>
+                    <p>
+                        An updated app version is available. This is not significantly different from
+                        the previous version (v1.0.1) except for a bug fix. In the previous version dynamic
+                        traits were not functioning properly on the app. You couldn't navigate between the
+                        multiple scores in a dynamic trait if that trait was the first one in the set of
+                        scoring traits. This is fixed in the new version.
+
+                        <!-- If you need to link to more..
+                        <span><a href="??.html" class="more">Read More</a></span>
+                        -->
+                    </p>
+                </li>
+
+                <li>
+                    <div class="date">
+                        <p>
                             <span>18/3</span>
                             2015
                         </p>
