--- a/fpa/fp_web_admin/static/fpStyle.css
+++ b/fpa/fp_web_admin/static/fpStyle.css
@@ -50,7 +50,7 @@ h3{
     background: white;
     z-index: 1000;
 }
-.header {
+.fpHeader {
     width: 100%;
     height: 80px;
     background: white;
@@ -346,7 +346,7 @@ label { display: inline-block; width: 140px; text-align: left; }*/
 .dataTables_scrollHeadInner{
     padding: 0 ! important;
 }
-.header{
+.fpHeader{
     border-left: 1px solid #023;
     border-right: 1px solid #023;
 }
@@ -395,6 +395,7 @@ table.fptable{
 */
 /*** header: *********************************************************
  * Style for the header across the top of all pages.
+ MFK Not sure this is used see class fpHeader
  */
 #header {
 	background-color: #eeeeee;
@@ -410,6 +411,7 @@ table.fptable{
 }
 
 /*-- HeaderMenu: ---------------------------------------*/
+/* MFK is any of this used now? */
 #headerMenu {
     white-space: nowrap;
 	list-style: none;
