--- a/fpa/fp_web_admin/templates/base.html
+++ b/fpa/fp_web_admin/templates/base.html
@@ -21,9 +21,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/themes/smoothness/jquery-ui.css" />
-  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+  <script>
+    if (typeof jQuery == 'undefined' || typeof jQuery.ui == 'undefined') {
+        var script = document.createElement('script');
+        script.src = '{{ url_for('static', filename='lib/jquery-1.11.2.min.js') }}';
+        document.write(script.outerHTML);
+
+        var juiCss = document.createElement('link');
+        juiCss.rel = 'stylesheet';
+        juiCss.href = '{{ url_for('static', filename='lib/jquery-ui.1.11.4.css') }}';
+        document.write(juiCss.outerHTML);
+
+        var script = document.createElement('script');
+        script.src = '{{ url_for('static', filename='lib/jquery-ui-1.11.2.min.js') }}';
+        document.write(script.outerHTML);
+    }
+  </script>
+
   <script src="{{ url_for('static', filename='fplib.js') }}"></script>
 
   <!-- Font Awesome for icons -->
