--- a/fpa/fp_web_admin/static/fpStyle.css
+++ b/fpa/fp_web_admin/static/fpStyle.css
@@ -30,14 +30,8 @@ h2{
 h3{
     color: #0F4A84;
 }
-/*------------------------- Font ------------------------*/
-@font-face {
-    font-weight: normal;
-    font-style: normal;
-}
 
 /*------------------------- Header ------------------------*/
-
 
 /*
  * class dataHeader
@@ -148,7 +142,7 @@ label { display: inline-block; width: 140px; text-align: left; }*/
 
 
 /*------------------------- Footer ------------------------*/
-#footer{
+.fpFooter{
     bottom: 0;
     width:100%;
     background: #023;
@@ -605,10 +599,6 @@ h2 {
  *
  */
 
-.fred {
-    height:100px;
-    background-color:yellow;
-}
 #dpwhWrapper {
     width: 100%;
     display:table;
